--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     strategy:
       matrix:
-        runner: [ubuntu-latest, ARM64]
+        runner: [ARM64]
         
     runs-on: ${{ matrix.runner }}
     steps:
